<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text='@string/txt_titulo'
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/images" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/txt_hint_gasolina"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/txt_hint_etanol"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/corBotoes"
                android:gravity="center"
                android:text="@string/button_calculate" />

            <TextView
                android:id="@+id/txtSppiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/select_result"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/corBotoes"
                android:text="@string/txt_button_limpar" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/corBotoes"
                android:text="@string/txt_button_salvar" />


            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/corBotoes"
                android:text="@string/txt_button_finalizar" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>